chore: update email address

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -22,7 +22,7 @@
     "security",
     "zeppelin"
   ],
-  "author": "LaLa Labs <mediavrog@gmail.com>",
+  "author": "LaLa Labs <maik@mediavrog.net>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/github.com/lala-labs/issues"
