--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "opensea",
     "migration"
   ],
-  "author": "LaLa Labs <maik@shackergang.com>",
+  "author": "LaLa Labs <maik@mediavrog.net>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/lala-labs/contracts/issues"
