--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lalalabs-solidity",
   "description": "Solidity tools and contracts.",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "files": [
     "/contracts/**/*.sol",
     "/build/contracts/*.json",
@@ -50,6 +50,7 @@
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.35",
     "chai": "^4.3.6",
+    "erc721a": "^4.2.3",
     "eslint": "^8.15.0",
     "eslint-plugin-mocha": "^10.0.4",
     "eslint-plugin-node": "^11.1.0",
